--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,4 +4,11 @@
   padding: 0;
 }
 
+.App {
+  border: 1px solid red;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
+}
+
 /*# sourceMappingURL=styles.css.map */
