--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,3 +3,10 @@
     margin: 0;
     padding: 0;
 }
+
+.App {
+    border: 1px solid red;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+}
