--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,3 +1,5 @@
+@use './settings/' as *;
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -9,4 +11,25 @@
     display: grid;
     grid-template-rows: auto 1fr auto;
     min-height: 100vh;
+    header {
+        border: 1px solid violet;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        & > .container {
+            border: 1px solid aqua;
+            display: flex;
+            padding: $padding;
+        }
+        #title {
+            align-items: center;
+            flex-direction: column;
+        }
+        
+    }
+    footer {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        padding: $padding;
+    }
 }
