--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,13 @@
 body {
   font-family: Quicksand, sans-serif;
 }
+body ul {
+  list-style: none;
+}
+body a {
+  color: inherit;
+  text-decoration: none;
+}
 
 .App {
   display: grid;
@@ -19,13 +26,33 @@ body {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: 1fr 1fr;
+  left: 0;
+  position: sticky;
+  right: 0;
   text-transform: capitalize;
+  top: 0;
 }
 .App header > .container {
   background: #1f1f1f;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   color: #f1f1f1;
   display: flex;
+}
+.App header > .container nav {
+  width: 100%;
+}
+.App header > .container nav ul {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: space-evenly;
+}
+.App header > .container nav ul a {
+  font-weight: bold;
+  padding-bottom: 0.25rem;
+}
+.App header > .container nav ul a.active {
+  border-bottom: 5px solid #ff5784;
 }
 .App header > .container:nth-child(2) {
   border-bottom-left-radius: 10px;
@@ -39,6 +66,7 @@ body {
   border: 5px solid #1f1f1f;
   border-radius: 10px;
   color: #1f1f1f;
+  cursor: pointer;
   flex-direction: column;
   grid-row: 1/-1;
   justify-content: center;
