--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,6 +9,13 @@
 
 body {
     font-family: Quicksand, sans-serif;
+    ul {
+        list-style: none;
+    }
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
 }
 
 .App {
@@ -19,12 +26,32 @@ body {
         display: grid;
         grid-template-columns: 1fr auto 1fr;
         grid-template-rows: 1fr 1fr;
+        left: 0;
+        position: sticky;
+        right: 0;
         text-transform: capitalize;
+        top: 0;
         & > .container {
             background: $primary;
             box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
             color: $secondary;
             display: flex;
+            nav {
+                width: 100%;
+                ul {
+                    align-items: center;
+                    display: flex;
+                    height: 100%;
+                    justify-content: space-evenly;
+                    a {
+                        font-weight: bold;
+                        padding-bottom: math.div($padding, 4);
+                        &.active {
+                            border-bottom: $border-width solid $pink-bright;
+                        }
+                    }
+                }
+            }
             &:nth-child(2) {
                 border-bottom-left-radius: $border-radius;
                 border-bottom-right-radius: $border-radius;
@@ -38,6 +65,7 @@ body {
             border: $border-width solid $primary;
             border-radius: $border-radius;
             color: $primary;
+            cursor: pointer;
             flex-direction: column;
             grid-row: 1 / -1;
             justify-content: center;
