--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,8 +7,13 @@
 }
 
 body {
+  background-position: center;
+  background-size: auto;
   font-family: Quicksand, sans-serif;
   overflow-x: hidden;
+}
+body h1 {
+  margin: 0;
 }
 body ul {
   list-style: none;
@@ -71,18 +76,39 @@ body a {
   flex-direction: column;
   grid-row: 1/-1;
   justify-content: center;
-  padding: 2rem 4rem;
+  padding: 1rem 4rem;
   text-align: center;
 }
 .App header #title h1 {
   border-bottom: 5px solid #ff5784;
+  font-family: Corinthia, Arial, Helvetica, sans-serif;
+  font-size: 2.5rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0.5rem;
+  text-transform: capitalize;
 }
 .App header #title small {
+  font-family: Quicksand;
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
+}
+.App main h2 {
+  color: #d36582;
+  font-family: Corinthia, Arial, Helvetica, sans-serif;
+  font-size: 3rem;
+  font-weight: bold;
+  margin: 1rem 2rem;
+  text-transform: capitalize;
+}
+.App main #image-carousel {
+  border: 1px solid red;
+  margin: 0 2rem;
+}
+.App main img {
+  border-radius: 10px;
+  height: 500px;
+  width: 500px;
 }
 .App footer {
   align-items: center;
