--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -8,8 +8,13 @@
 }
 
 body {
+    background-position: center;
+    background-size: auto;
     font-family: Quicksand, sans-serif;
     overflow-x: hidden;
+    h1 {
+        margin: 0;
+    }
     ul {
         list-style: none;
     }
@@ -70,20 +75,43 @@ body {
             flex-direction: column;
             grid-row: 1 / -1;
             justify-content: center;
-            padding: $padding * 2 $padding * 4;
+            padding: $padding $padding * 4;
             text-align: center;
             h1 {
                 border-bottom: $border-width solid $pink-bright;
+                font-family: Corinthia, Arial, Helvetica, sans-serif;
+                font-size: 2.5rem;
                 margin-bottom: math.div($margin, 2);
                 padding-bottom: math.div($padding, 2);
+                text-transform: capitalize;
             }
             small {
+                font-family: Quicksand;
                 font-size: 1rem;
                 font-weight: bold;
                 text-transform: uppercase;
             }
         }
         
+    }
+    main {
+        h2 {
+            color: $pink-medium;
+            font-family: Corinthia, Arial, Helvetica, sans-serif;
+            font-size: 3rem;
+            font-weight: bold;
+            margin: $margin $margin * 2;
+            text-transform: capitalize;
+        }
+        #image-carousel {
+            border: 1px solid red;
+            margin: 0 $margin * 2;
+        }
+        img {
+            border-radius: $border-radius;
+            height: 500px;
+            width: 500px;
+        }
     }
     footer {
         align-items: center;
