--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -130,6 +130,7 @@ body a {
   display: flex;
   gap: 12px;
   margin: 1rem;
+  margin-top: 60px;
 }
 .App main #summary #btn-group button {
   align-items: center;
@@ -142,8 +143,8 @@ body a {
   display: flex;
   font-weight: bold;
   justify-content: center;
-  height: 36px;
-  padding: 1rem;
+  height: 60px;
+  padding: 1rem 2.25rem;
   text-transform: capitalize;
 }
 .App main #summary #btn-group button:hover {
@@ -173,6 +174,20 @@ body a {
   margin-top: 0;
   padding: 1rem;
   text-transform: capitalize;
+}
+.App main .container-two {
+  border: 5px solid #d36582;
+  border-radius: 8px;
+  grid-column: 2/-1;
+  grid-row: 1/-1;
+  max-height: 100%;
+  margin: 1rem;
+  margin-left: 0;
+}
+.App main .container-two img {
+  border-radius: 2.5px;
+  height: 100%;
+  width: 100%;
 }
 .App footer {
   align-items: center;
