--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,6 +98,7 @@ body a {
 }
 .App main {
   background: rgba(31, 31, 31, 0.9);
+  border: 1px groove rgba(241, 241, 241, 0.1);
   border-radius: 8px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   display: grid;
@@ -123,14 +124,14 @@ body a {
   padding: 1rem;
 }
 .App main #summary #phrase {
-  color: #d36582;
+  color: #ff5784;
   font-family: Corinthia, Arial, Helvetica, sans-serif;
   font-size: 4rem;
   text-transform: capitalize;
 }
 .App main #summary #btn-group {
   display: flex;
-  gap: 12px;
+  gap: 1rem;
   margin: 1rem;
   margin-top: 60px;
 }
@@ -146,14 +147,17 @@ body a {
   font-weight: bold;
   justify-content: center;
   height: 60px;
+  letter-spacing: 0.033rem;
   padding: 1rem 2.25rem;
   text-transform: capitalize;
+  width: 300px;
 }
 .App main #summary #btn-group button:hover {
   background: #ff5784;
+  scale: 1.025;
 }
 .App main #summary span {
-  color: #d36582;
+  color: #ff5784;
   font-size: 1.75rem;
 }
 .App main #summary h3 {
@@ -169,6 +173,8 @@ body a {
   border: 5px solid #d36582;
   border-radius: 8px;
   display: flex;
+  flex-direction: column;
+  gap: 2rem;
   grid-column: 1/1;
   grid-row: 2/-1;
   justify-content: center;
@@ -176,6 +182,27 @@ body a {
   margin-top: 0;
   padding: 1rem;
   text-transform: capitalize;
+}
+.App main .container #social-icons {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+.App main .container #social-icons button {
+  background: rgba(31, 31, 31, 0.9);
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  color: rgba(255, 87, 132, 0.9);
+  cursor: pointer;
+  padding: 0.25rem;
+}
+.App main .container #social-icons button:hover {
+  color: #ff5784;
+  scale: 1.1;
+}
+.App main .container #social-icons button i {
+  font-size: 2rem;
 }
 .App main .container-two {
   border: 5px solid #d36582;
