--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -99,6 +99,7 @@ body {
     }
     main {
         background: rgba($primary, 0.9);
+        border: 1px groove rgba($secondary, 0.1);
         border-radius: math.div($border-radius, 1.25);
         box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
         display: grid;
@@ -132,14 +133,14 @@ body {
             margin-bottom: 0;
             padding: $padding;
             #phrase {
-                color: $pink-medium;
+                color: $pink-bright;
                 font-family: Corinthia, Arial, Helvetica, sans-serif;
                 font-size: 4rem;
                 text-transform: capitalize;
             }
             #btn-group {
                 display: flex;
-                gap: 12px;
+                gap: $grid-gap;
                 margin: $margin;
                 margin-top: 60px;
                 button {
@@ -154,15 +155,18 @@ body {
                     font-weight: bold;
                     justify-content: center;
                     height: 60px;
+                    letter-spacing: 0.033rem;
                     padding: $padding $padding * 2.25;
                     text-transform: capitalize;
+                    width: 300px;
                     &:hover {
                         background: $pink-bright;
+                        scale: 1.025;
                     }
                 }
             }
             span {
-                color: $pink-medium;
+                color: $pink-bright;
                 font-size: 1.75rem;
             }
             h3 {
@@ -189,6 +193,8 @@ body {
             border: $border solid $pink-medium;
             border-radius: math.div($border-radius, 1.25);
             display: flex;
+            flex-direction: column;
+            gap: $grid-gap * 2;
             grid-column: 1 / 1;
             grid-row: 2 / -1;
             justify-content: center;
@@ -196,6 +202,27 @@ body {
             margin-top: 0;
             padding: $padding;
             text-transform: capitalize;
+            #social-icons {
+                display: flex;
+                gap: $grid-gap;
+                justify-content: center;
+                button {
+                    background: rgba($primary, 0.9);
+                    border: none;
+                    border-radius: math.div($border-radius, 1.25);
+                    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+                    color: rgba($pink-bright, 0.9);
+                    cursor: pointer;
+                    padding: math.div($padding, 4);
+                    &:hover {
+                        color: $pink-bright;
+                        scale: 1.1;
+                    }
+                    i {
+                        font-size: 2rem;
+                    }
+                }
+            }
         }
         .container-two {
             border: $border solid $pink-medium;
