--- a/src/scss/pages/_Contact.scss
+++ b/src/scss/pages/_Contact.scss
@@ -74,7 +74,7 @@
                     color: $pink-bright;
                     font-size: 2rem;
                 }
-                span {
+                a {
                     align-items: center;
                     display: flex;
                     gap: $grid-gap;
