--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -307,92 +307,61 @@ body a {
   display: grid;
   gap: 8rem;
   grid-template-rows: auto;
-  padding: 2rem;
+  padding: 2rem 0;
   margin: 1rem 4rem;
 }
 #gallery h2, #gallery h3, #gallery h4 {
   letter-spacing: 0.033rem;
   text-transform: capitalize;
 }
-#gallery h3, #gallery h4 {
-  margin: 2rem 0;
-}
 #gallery h2 {
   border-bottom: 5px solid #ff5784;
   display: flex;
   justify-content: center;
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin: 0 2rem 1rem;
   padding-bottom: 1rem;
 }
-#gallery h3 {
-  font-size: 1.5rem;
-  margin-left: 1rem;
-}
-#gallery h4 {
-  font-size: 1.2rem;
-  margin-left: 2rem;
-}
 #gallery ul {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  list-style: disc;
-  margin: 0 2rem;
-}
-#gallery ul p {
-  padding-left: 0.25rem;
-}
-#gallery #booking-policy article {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-#gallery-info {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: auto 1fr 3fr 1fr auto;
   list-style: none;
+  padding: 1rem;
 }
-#gallery-info h3 {
+#gallery ul li {
+  align-items: center;
   display: flex;
   justify-content: center;
-  text-transform: none;
 }
-#gallery-info ol {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-#gallery-info ol li {
-  align-items: center;
-  background: #1f1f1f;
-  border: 1px solid rgba(241, 241, 241, 0.1);
+#gallery ul li button {
+  background: transparent;
+  border: none;
   border-radius: 8px;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.33);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 4rem;
+  color: #f1f1f1;
+  cursor: pointer;
+  font-size: 1.5rem;
+  height: 100%;
+  width: 36px;
 }
-#gallery-info ol li h4 {
+#gallery ul li button:hover {
   color: #ff5784;
-  font-size: 2rem;
+  transform: scale(1.05);
 }
-#gallery-info ol li a {
-  align-items: center;
-  display: flex;
-  gap: 1rem;
+#gallery ul li img {
+  border: 5px solid rgba(241, 241, 241, 0.8);
+  border-radius: 10px;
+  display: block;
+  max-height: 550px;
+  max-width: 100%;
+  object-fit: cover;
+  opacity: 0.9;
+  transition: 0.3s ease all;
 }
-#gallery-info ol li a:hover {
-  color: #ff5784;
-  scale: 1.1;
-}
-#gallery-info ol li a h5, #gallery-info ol li a i {
-  font-size: 2rem;
-}
-#gallery-info ol li a i {
-  color: #ff5784;
+#gallery ul li.active img {
+  border: 5px solid #f1f1f1;
+  opacity: 1;
+  transform: scale(1.05);
 }
 
 #home {
@@ -437,24 +406,27 @@ body a {
 }
 #home #summary #btn-group button {
   align-items: center;
-  background: #ff5784;
+  background: rgba(255, 87, 132, 0.9);
   border: 5px solid #1f1f1f;
   border-radius: 8px;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   color: #f1f1f1;
   cursor: pointer;
   display: flex;
+  font-size: 1rem;
   font-weight: bold;
   justify-content: center;
   height: 60px;
-  letter-spacing: 0.033rem;
   padding: 1rem 2.25rem;
   text-transform: capitalize;
+  transition: 0.2s ease-in-out;
   width: 300px;
 }
 #home #summary #btn-group button:hover {
   background: #ff5784;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   scale: 1.025;
+  transition: 0.2s ease-in-out;
 }
 #home #summary span {
   color: #ff5784;
@@ -507,12 +479,14 @@ body a {
   background: rgba(31, 31, 31, 0.9);
   border: none;
   border-radius: 8px;
-  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
   color: rgba(255, 87, 132, 0.9);
   cursor: pointer;
   padding: 0.25rem;
+  transition: 0.2s ease-in-out;
 }
 #home .container #social-icons a:hover {
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
   color: #ff5784;
   scale: 1.1;
 }
